--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>智能選服幕僚系統</title>
+    <title>DEEPAIGN</title>
   </head>
   <body>
     <noscript>您需要啟用JavaScript才能運行此應用程序。</noscript>
